Revision history for {{$dist->name}}},

{{$NEXT}}
  - Use hard coded full path to tarball, as PCRE1 has been
    EOLd and there is unlikely to be another new version,
    now fetching from (unofficial) sourceforce mirror as the
    old https is gone (gh#5, gh#8)

0.01      2020-05-15 06:57:34 -0600
  - initial version

